Add entities ans repositories

--- a/learning-spring-with-springboot/src/main/resources/application.properties
+++ b/learning-spring-with-springboot/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#View messages on the log console, we don't do these in a production enviroment. 
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
+#none because we already applied a schema to our embedded database and populated it with data
+#if it's not, import the schema and the data via the scriptUtils
+spring.jpa.hibernate.ddl-auto=none
 
